<?xml version="1.0" encoding="UTF-8"?>
<project name="Lab3Ant" default="all">

    <property file="build.properties"/>
    <property environment="env"/>

    <condition property="java.home" value="/usr/local/openjdk17" else="${java.home}">
        <available file="/usr/local/openjdk17"/>
    </condition>

    <taskdef resource="net/sf/antcontrib/antlib.xml">
        <classpath>
            <pathelement location="${lib.dir}/ant-contrib-1.0b3.jar"/>
        </classpath>
    </taskdef>

    <path id="project.classpath">
        <fileset dir="${lib.dir}">
            <include name="*.jar"/>
        </fileset>
    </path>

    <target name="clean">
        <delete dir="${build.dir}"/>
        <delete dir="${dist.dir}"/>
    </target>

    <target name="compile">
        <mkdir dir="${classes.dir}"/>
        <javac
                srcdir="${src.dir}"
                destdir="${classes.dir}"
                includeantruntime="false"
                fork="true"
                source="17"
                target="17"
                encoding="UTF-8">
            <classpath refid="project.classpath"/>
        </javac>

        <copy todir="${classes.dir}">
            <fileset dir="${resources.dir}"/>
        </copy>
    </target>

    <target name="native2ascii" description="Конвертация файлов локализации">
        <mkdir dir="${classes.dir}"/>
        <native2ascii src="${resources.dir}"
                      dest="${classes.dir}"
                      includes="**/*.properties"
                      ext=".properties"
                      encoding="UTF-8"/>
    </target>

    <target name="build" depends="compile">
        <mkdir dir="${dist.dir}"/>
        <war
                destfile="${dist.dir}/${war.name}"
                webxml="${web.dir}/WEB-INF/web.xml"
                manifest="${manifest.file}">

            <fileset dir="${web.dir}"/>

            <classes dir="${classes.dir}"/>

            <lib dir="${lib.dir}"/>
        </war>
    </target>

    <target name="doc" depends="compile" description="Генерация Javadoc и обновление MANIFEST.MF">
        <mkdir dir="${build.dir}/javadoc"/>

        <javadoc sourcepath="${src.dir}"
                 destdir="${build.dir}/javadoc"
                 encoding="UTF-8"
                 docencoding="UTF-8"
                 charset="UTF-8">
            <classpath refid="project.classpath"/>
        </javadoc>

        <jar destfile="${dist.dir}/javadoc.jar" basedir="${build.dir}/javadoc"/>

        <checksum algorithm="MD5" totalproperty="md5.total">
            <fileset dir="${classes.dir}"/>
        </checksum>
        <checksum algorithm="SHA-1" totalproperty="sha1.total">
            <fileset dir="${classes.dir}"/>
        </checksum>

        <manifest file="${manifest.file}">
            <attribute name="Manifest-Version" value="1.0"/>
            <attribute name="App-Version" value="1.0-SNAPSHOT"/>
            <attribute name="Main-Class" value="org.example.misc.CenteredSplash"/>
            <attribute name="Project-MD5-Digest" value="${md5.total}"/>
            <attribute name="Project-SHA1-Digest" value="${sha1.total}"/>
        </manifest>
    </target>

    <target name="test" depends="build">
        <mkdir dir="${test.classes.dir}"/>
        <mkdir dir="${build.dir}/test-reports"/>

        <javac srcdir="${test.dir}"
               destdir="${test.classes.dir}"
               includeantruntime="false"
               fork="true"
               source="17"
               target="17"
               executable="${java.home}/bin/javac">
            <classpath>
                <path refid="project.classpath"/>
                <pathelement path="${classes.dir}"/>
            </classpath>
        </javac>

        <junit printsummary="yes"
               haltonfailure="yes"
               fork="yes"
               showoutput="true"
               jvm="${java.home}/bin/java">

            <jvmarg value="-XX:+EnableDynamicAgentLoading"/>

            <classpath>
                <path refid="project.classpath"/>
                <pathelement path="${classes.dir}"/>
                <pathelement path="${test.classes.dir}"/>
            </classpath>

            <formatter type="xml" usefile="true"/>
            <formatter type="plain" usefile="false"/>

            <batchtest todir="${build.dir}/test-reports">
                <fileset dir="${test.classes.dir}">
                    <include name="**/*Test.class"/>
                </fileset>
            </batchtest>
        </junit>
    </target>

    <target name="env" depends="build, compile-splash" description="Сборка и запуск в альтернативном окружении">
        <java classname="org.example.misc.CenteredSplash" fork="true" jvm="${env.java.home}/bin/java">
            <classpath>
                <path refid="project.classpath"/>
                <pathelement path="${test.classes.dir}"/>
            </classpath>
            <jvmarg line="${env.jvm.args}"/>
            <arg value="src/test/assets/images/${image.success.file}"/>
            <arg value="--auto-close"/>
            <arg value="2000"/>
        </java>
    </target>

    <target name="alt" description="Создание альтернативной версии с измененными именами">
        <echo message="=== Создание ALT версии ==="/>
        <property name="alt.src.dir" value="${build.dir}/alt-src"/>
        <mkdir dir="${alt.src.dir}"/>

        <copy todir="${alt.src.dir}">
            <fileset dir="${src.dir}"/>
            <filterchain>
                <replaceregex pattern="${alt.regex.pattern}" replace="${alt.regex.replace}" flags="g"/>
            </filterchain>
        </copy>

        <move file="${alt.src.dir}/org/example/beans/PointBean.java"
              tofile="${alt.src.dir}/org/example/beans/AltPointBean.java"
              failonerror="false"/>

        <antcall target="build">
            <param name="src.dir" value="${alt.src.dir}"/>
            <param name="war.name" value="lab3-alt.war"/>
        </antcall>
    </target>

    <target name="team" description="Сборка двух предыдущих ревизий">
        <echo message="=== Сборка предыдущих ревизий (TEAM) ==="/>
        <mkdir dir="${build.dir}/team-archives"/>

        <exec executable="git" outputproperty="team.original.branch">
            <arg line="branch --show-current"/>
        </exec>

        <exec executable="git" outputproperty="team.rev1"><arg line="rev-parse HEAD~1"/></exec>
        <exec executable="git" outputproperty="team.rev2"><arg line="rev-parse HEAD~2"/></exec>

        <exec executable="git"><arg line="checkout ${team.rev1}"/></exec>
        <antcall target="build"><param name="war.name" value="lab3-rev1.war"/></antcall>
        <copy file="${dist.dir}/lab3-rev1.war" todir="${build.dir}/team-archives" failonerror="false"/>

        <exec executable="git"><arg line="checkout ${team.rev2}"/></exec>
        <antcall target="build"><param name="war.name" value="lab3-rev2.war"/></antcall>
        <copy file="${dist.dir}/lab3-rev2.war" todir="${build.dir}/team-archives" failonerror="false"/>

        <exec executable="git"><arg line="checkout ${team.original.branch}"/></exec>

        <zip destfile="${dist.dir}/team-builds.zip" basedir="${build.dir}/team-archives"/>
        <echo message="Архив team-builds.zip успешно создан в папке dist/"/>
    </target>

    <target name="music">
        <trycatch property="error.occurred">
            <try>
                <antcall target="build"/>
            </try>
            <finally>
                <parallel>
                    <antcall target="result-soundtrack"/>
                    <antcall target="show-splash"/>
                </parallel>
            </finally>
        </trycatch>
    </target>

    <target name="compile-splash">
        <mkdir dir="${test.classes.dir}"/>
        <javac srcdir="${test.dir}"
               destdir="${test.classes.dir}"
               includeantruntime="false"
               fork="true"
               source="17"
               target="17"
               encoding="UTF-8">
            <include name="org/example/misc/CenteredSplash.java"/>
        </javac>
    </target>

    <target name="show-splash" depends="compile-splash">
        <condition
                property="image"
                value="${image.failure.file}"
                else="${image.success.file}">
            <isset property="error.occurred"/>
        </condition>
        <condition
                property="duration"
                value="3000"
                else="5000">
            <isset property="error.occurred"/>
        </condition>
        <java classname="org.example.misc.CenteredSplash" fork="true" spawn="true">
            <classpath location="build/test-classes"/>
            <arg value="src/test/assets/images/${image}"/>
            <arg value="--auto-close"/>
            <arg value="${duration}"/>
        </java>
    </target>

    <target name="result-soundtrack">
        <condition
                property="music"
                value="${music.failure.file}"
                else="${music.success.file}">
            <isset property="error.occurred"/>
        </condition>
        <condition
                property="message"
                value="${message.failure.text}"
                else="${message.success.text}">
            <isset property="error.occurred"/>
        </condition>

        <echo message="${message}"/>

        <exec executable="cmd" osfamily="windows" spawn="true">
            <arg value="/c"/>
            <arg value="start"/>
            <arg value=""/>
            <arg value="src/test/assets/music/${music}"/>
        </exec>

        <exec executable="afplay" osfamily="mac" spawn="true">
            <arg value="src/test/assets/music/${music}"/>
        </exec>
    </target>

    <target name="history">
        <exec executable="git" outputproperty="git.head_revision">
            <arg line="rev-parse HEAD"/>
        </exec>
        <exec executable="git" outputproperty="git.tail_revision">
            <arg line="rev-list --max-parents=0 HEAD"/>
        </exec>

        <echo message="Head revision: ${git.head_revision}"/>
        <echo message="Tail revision: ${git.tail_revision}"/>

        <var name="git.new_revision" unset="true"/>
        <exec executable="git" outputproperty="git.new_revision">
            <arg line="rev-parse HEAD~1"/>
        </exec>

        <trycatch>
            <try>
                <antcall target="compile"/>
                <var name="compile.successful" unset="true"/>
                <property name="compile.successful" value="true"/>
                <echo message="Project compiled successfully!"/>

                <sequential>
                    <exec executable="git" outputproperty="diff_output">
                        <arg line="diff ${git.head_revision} ${git.new_revision}"/>
                    </exec>
                    <echo file="diff_output.txt" message="${diff_output}"/>
                </sequential>

            </try>
            <catch>
                <echo message="Project compilation failed!"/>
                <echo message="Checkout revision: ${git.new_revision}"/>
                <exec executable="git" dir="${project.dir}">
                    <arg line="reset --hard ${git.new_revision}"/>
                </exec>
                <var name="compile.successful" unset="true"/>
                <property name="compile.successful" value="false"/>
                <if>
                    <equals arg1="${git.new_revision}" arg2="${git.tail_revision}"/>
                    <then>
                        <echo message="No more revisions to checkout"/>
                    </then>
                    <else>
                        <runtarget target="history"/>
                    </else>
                </if>
            </catch>
        </trycatch>

        <exec executable="git" dir="${project.dir}">
            <arg line="checkout ${git.head_revision}"/>
        </exec>
    </target>

    <target name="diff">
        <exec executable="git"
              outputproperty="git.diff">
            <arg value="diff"/>
            <arg value="--name-only"/>
        </exec>
        <echo message="${git.diff}"/>
        <for list="${git.classes}" param="class.name" delimiter=",">
            <sequential>
                <if>
                    <contains string="${git.diff}" substring="@{class.name}"/>
                    <then>
                        <property name="need.commit" value="true"/>
                    </then>
                </if>
            </sequential>
        </for>
        <if>
            <isset property="need.commit"/>
            <then>
                <antcall target="git-commit"/>
            </then>
        </if>
    </target>

    <target name="git-commit" if="need.commit">
        <exec executable="git">
            <arg value="add"/>
            <arg value="."/>
        </exec>
        <exec executable="git">
            <arg value="commit"/>
            <arg value="-m"/>
            <arg value="Auto commit by Ant"/>
        </exec>
    </target>

    <target name="scp" depends="build" description="Deploy WAR file via SCP">
        <property file="deploy.properties"/>

        <fail unless="scp.host" message="scp.host is not defined in deploy.properties"/>
        <fail unless="scp.username" message="scp.username is not defined in deploy.properties"/>
        <fail unless="scp.remote.dir" message="scp.remote.dir is not defined in deploy.properties"/>

        <available file="${dist.dir}/${war.name}" property="war.exists"/>
        <fail unless="war.exists" message="WAR file ${dist.dir}/${war.name} not found. Run 'ant build' first."/>

        <echo message="Deploying ${dist.dir}/${war.name} to ${scp.username}@${scp.host}:${scp.remote.dir}/"/>

        <exec executable="scp" failonerror="true">
            <arg value="-P"/>
            <arg value="${scp.port}"/>
            <arg value="${dist.dir}/${war.name}"/>
            <arg value="${scp.username}@${scp.host}:${scp.remote.dir}/"/>
        </exec>

        <echo message="Deployment completed successfully!"/>
    </target>

    <target name="xml" description="Validate all XML files">
        <echo message="=== Validating XML files ==="/>

        <xmlvalidate file="build.xml" failonerror="true" lenient="true"/>
        <echo message="build.xml is well-formed"/>

        <xmlvalidate file="${web.dir}/WEB-INF/web.xml" failonerror="false" lenient="true"/>
        <echo message="web.xml validation attempted"/>

        <xmlvalidate failonerror="false" lenient="true">
            <fileset dir="." includes="**/*.xml"
                     excludes="build.xml, **/build/** , **/dist/** , **/target/** , **/.idea/** , **/*.iml"/>
        </xmlvalidate>

        <echo message="=== XML validation complete ==="/>
    </target>

    <target name="report" depends="test" description="Commit test reports to Git">
        <echo message="=== Committing JUnit Reports to Git ==="/>

        <tstamp>
            <format property="now" pattern="yyyy-MM-dd HH:mm:ss"/>
        </tstamp>

        <copy todir="test-reports" failonerror="false">
            <fileset dir="${build.dir}/test-reports" includes="TEST-*.xml"/>
        </copy>

        <exec executable="git" dir="." failonerror="false">
            <arg value="add"/>
            <arg value="test-reports/*.xml"/>
        </exec>

        <exec executable="git" dir="." failonerror="false">
            <arg value="commit"/>
            <arg value="-m"/>
            <arg value="Test reports - ${now}"/>
        </exec>

        <echo message="Test reports committed to Git"/>
    </target>

    <target name="all">
        <trycatch property="error.occurred">
            <try>
                <antcall target="clean"/>
                <antcall target="test"/>
                <antcall target="diff"/>
            </try>
            <finally>
                <parallel>
                    <antcall target="result-soundtrack"/>
                    <antcall target="show-splash"/>
                </parallel>
            </finally>
        </trycatch>
    </target>
</project>